<resources>
    <string name="app_name">ISIPark</string>
    <string name="code">Code</string>
    <string name="text">In case of error, use your institution card!</string>
    <string name="back">Back</string>
    <string name="f_pass">Forgot Password</string>
    <string name="login">Login</string>
    <string name="create_ac">Create Account</string>
    <string name="profile">Profile</string>
    <string name="suges">Suggestion</string>
    <string name="park_sug">Park</string>
    <string name="create_or">Create Order</string>
    <string name="userInfo">User Information</string>

    <string name="more_action">More Actions</string>
    <string name="parking_edit">Parking Edit</string>
    <string name="new_entries">New Entries</string>
    <string name="my_info">My Vehicles</string>
    <string name="special">Special Profiles</string>
    <string name="report">Reports Messages</string>
    <string name="search_users">Search Users</string>
    <string name="logout">Log Out</string>

    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_vehicletype">Type</string>
    <string name="add_vehicleRegistration">Registration</string>
    <string name="add_vehicle_save">Save</string>

    <string name="send_noti">Send Notification</string>
    <string name="sendNoti_for">For:</string>
    <string name="sendNoti_all">All:</string>
    <string name="sendNoti_messa">Message:</string>
    <string name="sendNoti_send">Send</string>
    <string name="sendNoti_back">Back</string>

    <string name="report_titulo">Reports</string>
    <string name="report_wron">Wrongly parked</string>
    <string name="report_sect">Sector:</string>
    <string name="report_regist">Registration:</string>
    <string name="report_more">More:</string>

    <string name="notification_titulo">Notifications</string>
    <string name="history">History</string>
    <string name="vehicles">Vehicles</string>
    <string name="date">Entry Date</string>
    <string name="operation">Exit Date</string>
    <string name="sector">Place</string>

    <string name="add_more">Add More</string>
    <string name="name_regist">Name / Registration:</string>
    <string name="name">Name:</string>

    <string name="search">Search</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="exp_date">Expiration Date:</string>
    <string name="contact">Contact:</string>
    <string name="create">Create</string>
    <string name="add_code">Code:</string>

    <string name="normal_parking">Normal Parking:</string>
    <string name="motorcycle">Motorcycle:</string>
    <string name="electrics">Electrics:</string>
    <string name="reduced_mobility">Reduced Mobility:</string>
    <string name="add_map">Add Map</string>
    <string name="parking">Parking</string>
    <string name="id_hist">IDHistory</string>

</resources>