<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.HistoryActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/code_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="410dp"
        android:layout_height="60dp"
        android:textColor="@color/text"
        android:background="@color/white"
        android:text= "@string/history"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:enabled="false"
        android:id="@+id/history_et"
        app:layout_constraintTop_toBottomOf="@id/code_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/id_hist"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/id_history"
        app:layout_constraintTop_toBottomOf="@id/history_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/date"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/date_history"
        app:layout_constraintTop_toBottomOf="@id/history_et"
        app:layout_constraintStart_toEndOf="@id/id_history"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/operation"
        android:textSize="15sp"
        android:textStyle="bold"
        android:id="@+id/operation_history"
        app:layout_constraintTop_toBottomOf="@id/history_et"
        app:layout_constraintStart_toEndOf="@id/date_history"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/sector_history"
        android:layout_width="63dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/sector"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/operation_history"
        app:layout_constraintTop_toBottomOf="@id/history_et" />

    <ListView
        android:id="@+id/dashboard_list_history"
        android:layout_width="350dp"
        android:layout_height="340dp"
        android:background="@color/buttons"
        android:layout_marginTop="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_et" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textColor="@color/strings"
        android:backgroundTint="@color/buttons"
        android:id="@+id/history_back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:cornerRadius="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>