<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ReportsActivity"
    android:background="@color/background">


    <ImageView
    android:id="@+id/code_logo"
    android:layout_width="300dp"
    android:layout_height="100dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center"
    android:layout_marginTop="15dp"
    android:src="@drawable/logo" />

    <TextView
        android:layout_width="410dp"
        android:layout_height="60dp"
        android:textColor="@color/text"
        android:background="@color/white"
        android:text="@string/report_titulo"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/reports_ti"
        app:layout_constraintTop_toBottomOf="@id/code_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/reports_ti"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/report_wro"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/report_wron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/report_wro"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:text="@string/report_sect"
        android:id="@+id/report_setor"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp" />


    <EditText
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textColor="@color/black"
        android:id="@+id/AddVehicleRegistration"
        app:layout_constraintBottom_toBottomOf="@id/report_setor"
        app:layout_constraintStart_toEndOf="@id/report_setor"
        app:layout_constraintTop_toTopOf="@id/report_setor"
        android:background="@color/white" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/report_setor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:text="@string/report_regist"
        android:id="@+id/report_regis"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginEnd="10dp"/>


    <EditText
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textColor="@color/black"
        android:id="@+id/report_regisT"
        app:layout_constraintBottom_toBottomOf="@id/report_regis"
        app:layout_constraintStart_toEndOf="@id/report_regis"
        app:layout_constraintTop_toTopOf="@id/report_regis"
        android:background="@color/white" />

    <TextView
        android:layout_width="60dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/report_regis"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:text="@string/report_more"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/report_moreT" />

    <EditText
        android:id="@+id/report_moreti"
        android:layout_width="190dp"
        android:layout_height="130dp"

        android:layout_marginStart="8dp"
        android:background="@color/white"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/report_moreT"
        app:layout_constraintTop_toTopOf="@id/report_moreT" />

    <Button
        android:id="@+id/report_botao_send"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sendNoti_send"
        android:textColor="@color/text"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report_moreti"
        android:backgroundTint="@color/white" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/sendNoti_back"
        android:textColor="@color/strings"
        android:backgroundTint="@color/buttons"
        android:id="@+id/report_back_btn"
        app:layout_constraintTop_toBottomOf="@id/report_botao_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="60dp"
        app:cornerRadius="25dp" />




</androidx.constraintlayout.widget.ConstraintLayout>