<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ProfileActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/profile_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="410dp"
        android:layout_height="60dp"
        android:textColor="@color/text"
        android:background="@color/white"
        android:text="@string/profile"
        android:textSize="35dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:enabled="false"
        android:id="@+id/profile_et"
        app:layout_constraintTop_toBottomOf="@id/profile_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"/>

    <ListView
        android:id="@+id/list_profile"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@color/buttons"
        android:layout_marginTop="20dp"
        app:cornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_et"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/profile_logout"
        android:text="@string/logout"
        android:backgroundTint="@color/logout"
        app:layout_constraintTop_toBottomOf="@id/list_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:cornerRadius="25dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/profile_vehicle_btn"
        android:text="@string/vehicles"
        android:textColor="@color/strings"
        android:backgroundTint="@color/buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_logout"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:cornerRadius="25dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/profile_history_btn"
        android:text="@string/history"
        android:textColor="@color/strings"
        android:backgroundTint="@color/buttons"
        app:layout_constraintStart_toEndOf="@id/profile_vehicle_btn"
        app:layout_constraintTop_toBottomOf="@id/profile_logout"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:cornerRadius="25dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textColor="@color/strings"
        android:backgroundTint="@color/buttons"
        android:id="@+id/profile_back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:cornerRadius="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>