<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SpecialProfileActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/code_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/special_profile_et"
        android:layout_width="410dp"
        android:layout_height="60dp"
        android:textColor="@color/text"
        android:background="@color/white"
        android:text="@string/special"
        android:textSize="33sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/code_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        app:layout_constraintTop_toBottomOf="@+id/special_profile_et"
        android:textStyle="bold"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp" />

    <EditText
        android:id="@+id/add_name_et"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginStart="75dp"
        android:textColor="@color/text"
        android:background="@color/buttons"
        app:layout_constraintBottom_toBottomOf="@id/name_tv"
        app:layout_constraintStart_toEndOf="@id/name_tv"
        app:layout_constraintTop_toTopOf="@id/name_tv" />

    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:text="@string/report_regist"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/add_name_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/registration_et"
        android:layout_width="205dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:background="@color/buttons"
        app:layout_constraintBottom_toBottomOf="@id/registration_tv"
        app:layout_constraintStart_toEndOf="@id/registration_tv"
        app:layout_constraintTop_toTopOf="@id/registration_tv" />

    <TextView
        android:id="@+id/vehicle_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:text="@string/vehicle_type"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/registration_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp" />

    <Spinner
        android:id="@+id/addvehicletype_spinner"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:orientation="vertical"
        android:textColor="@color/black"
        android:background="@color/buttons"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/vehicle_type_tv"
        app:layout_constraintStart_toEndOf="@id/vehicle_type_tv"
        app:layout_constraintTop_toTopOf="@id/vehicle_type_tv" />

    <TextView
        android:id="@+id/code_tv"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:text="@string/add_code"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/addvehicletype_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/code_et"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginStart="80dp"
        android:textColor="@color/black"
        android:background="@color/buttons"
        app:layout_constraintBottom_toBottomOf="@id/code_tv"
        app:layout_constraintStart_toEndOf="@id/code_tv"
        app:layout_constraintTop_toTopOf="@id/code_tv" />

    <TextView
        android:id="@+id/exp_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:text="@string/exp_date"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/code_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/exp_date_et"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:background="@color/buttons"
        app:layout_constraintBottom_toBottomOf="@id/exp_date_tv"
        app:layout_constraintStart_toEndOf="@id/exp_date_tv"
        app:layout_constraintTop_toTopOf="@id/exp_date_tv" />

    <TextView
        android:id="@+id/contact_tv"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textStyle="bold"
        android:text="@string/contact"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/exp_date_et"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/contact_et"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="62dp"
        android:textColor="@color/black"
        android:background="@color/buttons"
        app:layout_constraintBottom_toBottomOf="@id/contact_tv"
        app:layout_constraintStart_toEndOf="@id/contact_tv"
        app:layout_constraintTop_toTopOf="@id/contact_tv" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/create"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/contact_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textColor="@color/strings"
        android:backgroundTint="@color/buttons"
        android:layout_marginTop="50dp"
        app:cornerRadius="25dp" />

    <Button
        android:id="@+id/special_profile_back"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttons"
        android:text="@string/back"
        android:textColor="@color/strings"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>