<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ReportsMessagesActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/reports_messages_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo" />

    <EditText
        android:layout_width="410dp"
        android:layout_height="60dp"
        android:textColor="@color/text"
        android:background="@color/white"
        android:text="@string/report"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:enabled="false"
        android:id="@+id/report_info_et"
        app:layout_constraintTop_toBottomOf="@id/reports_messages_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:text="@string/send_noti"
        android:textColor="@color/strings"
        android:id="@+id/report_send_btn"
        app:layout_constraintTop_toBottomOf="@id/report_info_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/buttons"
        app:cornerRadius="25dp"/>

    <ListView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/report_send_btn"
        app:layout_constraintBottom_toTopOf="@id/report_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/listview_reports"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textColor="@color/strings"
        android:backgroundTint="@color/buttons"
        android:id="@+id/report_back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:cornerRadius="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>